RESOLVED FIXED246519
Sliced blobs end up with the wrong Content-Type in fetch
https://bugs.webkit.org/show_bug.cgi?id=246519
Summary Sliced blobs end up with the wrong Content-Type in fetch
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-14 07:24:05 PDT
Anne van Kesteren
Comment 2 2023-04-03 11:38:56 PDT
EWS
Comment 3 2023-04-04 10:48:40 PDT
Committed 262583@main (d06509f47821): <https://commits.webkit.org/262583@main> Reviewed commits have been landed. Closing PR #12328 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.